# piteas_cpp_api

./: .gitmodules  CMakeLists.txt  README.md
include/: piteas_client.h  piteas_http_session.h  piteas_models.h
src/: piteas_client.cpp  piteas_http_session.cpp  piteas_models.cpp
test/: main.cpp
